# shared-folder

./: .dockerignore  .gitignore  .licensure.yml  Cargo.toml  DS_Rocket.toml  PKI_Rocket.toml  README.md  package-lock.json  style-reference.md
baseline/: Cargo.toml  README.md
baseline/src/: lib.rs  metadata.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml  README.md
common/src/: crypto.rs  lib.rs  mls.rs  pki.rs  utils.rs
common/tests/: wasm.rs
openapi/: ds-config.yaml  ds-openapi.yml  openapi.sh  pki-config.yaml  pki-openapi.yml
proposal/: BAMASE.cls  NOTES.md  proposal.tex  references.bib
services/: docker-compose.yaml
services/aws/: README.md  init-aws.sh
services/ds/: Cargo.toml  README.md
services/ds/src/: db.rs  lib.rs  main.rs  server.rs  storage.rs
services/ds/tests/: endpoints_test.rs
services/mysql/: pki_database.sql
services/pki/: .dockerignore  Cargo.toml  Dockerfile  README.md
services/pki/bash/: api.sh
services/pki/src/: crypto.rs  db.rs  lib.rs  server.rs
services/sql/: ds_database.sql  pki_database.sql
ssf/: Cargo.toml  README.md
ssf-client/: .editorconfig  .env  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  README.md  jest.config.cjs  openapi.ts  package-lock.json  package.json
ssf-client/src/: authentication.ts  cli.ts  ds.ts  main.ts  notifications.ts  pki.ts  repl.ts  storage.ts
ssf-client/src/protocol/: authentication.ts  baseline.ts  commonCrypto.ts  crypto.ts  kemKdf.ts  marshaller.ts  notifications.ts  protocolCommon.ts  publicCrypto.ts  ssf.ts  sskg.ts  symmetricCrypto.ts
ssf-client/src/protocol/doubleprf/: hmacDoublePrf.ts
ssf-client/src/protocol/doubleprf/test/: hmacDoublePrf.test.ts
ssf-client/src/protocol/group-key-progression/: dsMiddleware.ts  gkp.ts  grappa.ts  inMemoryMiddleware.ts  notifications.ts  storage.ts
ssf-client/src/protocol/group-key-progression/test/: grappa.test.ts  mlsRsIntegration.test.ts
ssf-client/src/protocol/key-progression/: dkr.ts  kappa.ts  kp.ts
ssf-client/src/protocol/key-progression/test/: kappa.test.ts
ssf-client/src/protocol/sskg/: sskg.ts  treeSSKG.ts
ssf-client/src/protocol/sskg/test/: treeSSKG.test.ts
ssf-client/src/protocol/test/: baseline.int.test.ts  baseline.test.ts  crypto.test.ts  ds.int.test.ts  kemKdf.test.ts  publicCrypto.test.ts  sskg.test.ts  symmetricCrypto.test.ts  websocket.int.test.ts
ssf-client/src/protocol/test/fixtures/: metadata2users0Files
ssf-client/src/protocol/test/fixtures/t_t_com/: cert.pem  key.pem
ssf-client/src/tests/: cli.int.test.ts
ssf/.cargo/: config.toml
ssf/src/: lib.rs  mls.rs
ssf/tests/: wasm.rs
thesis_template/: NOTEs.md  Untitled Diagram.drawio  abstract.tex  acknowledgements.tex  appendix.tex  background.tex  baseline-keys.drawio  baseline.tex  bug1.drawio  chapter.tex  conclusion.tex  crypto-environments.sty  crypto-game-environments.sty  dkr.drawio  gaps.tex  introduction.tex  referenceimplementation.tex  refs.bib  setup.tex  ssf.tex  systemrequirements.tex  thesis-architecture.drawio  thesis.tex
www/: .eslintignore  README.md  jest.config.cjs  openapi-ts.config.ts  openapi.ts  package-lock.json  package.json  tsconfig.json
www/src/: import_wasm.d.ts  import_wasm.js  index.html  main.ts
www/src/styles/: _variables.scss
www/webpack/: base.js  dev.js  prod.js
