[package]
name = "baseline"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Nicola Dardanis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.92"
wee_alloc = { version = "0.4.5", optional = true }

# https://github.com/briansmith/ring/issues/918
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }


[dev-dependencies]
wasm-bindgen-test = "0.3.42"
