[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Nicola Dardanis"]

[target."wasm32-unknown-unknown"]
rustflags = "-cfg mls_build_async"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.92"
wee_alloc = { version = "0.4.5", optional = true }
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2.15", features = ["js"] }
x509-parser = "0.16.0"
pem = "3.0.4"
env_logger = "0.11.3"
log = "0.4.21"


# https://github.com/briansmith/ring/issues/918
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
