[package]
name = "pki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
env_logger = "0.11.3"
log = "0.4.21"
openssl = "0.10.64"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
warp = { version = "0.3.7", features = ["tls"] }
warp-openssl = "0.5.4"

[dev-dependencies]
serde_json = "1.0.116"
