[package]
name = "pki"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Nicola Dardanis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
pem = "3.0.4"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
rocket = { version = "0.5.0", features = ["tls", "mtls", "json"] }
rustls = "0.23.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["rocket_extras", "yaml"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["rocket"] }
x509-parser = "0.16.0"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_mysql"]

[dependencies.sqlx]
default-features = false
features = ["macros"]

[dev-dependencies]
serde_json = "1.0.116"
